Fixes zoom issue on iOS (form)

--- a/django-verdant/rca/static/rca/css/enquiry-form.less
+++ b/django-verdant/rca/static/rca/css/enquiry-form.less
@@ -138,6 +138,10 @@
     input,
     textarea {
         padding: 10px;
+
+        @media screen and ( max-width : 768px ) {
+            font-size: 16px;
+        }
     }
 
     label {
